--- a/templates/body.html
+++ b/templates/body.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Header 1</h1>
+    <h1>{{name}}</h1>
     <p class="important">
       here is contents.
     </p>
