--- a/templates/body.html
+++ b/templates/body.html
@@ -1,24 +1,28 @@
 {% extends "base.html" %}
 
 {% block content %}
+<center>
   <h1>{{name}}</h1>
-  
-  <div class="container text-center">
-  {% for i in context.your_card %}
-    <div class="row">
-      {% for j in i %}
-        <div class="col">
-          {{j}}
-        </div>
-      {% endfor %}
-    </div>
-  {% endfor %}
-  </div>
-
-  <center>
   <a href="{{ url_for('reset') }}">
-    <button type="button" class="btn btn-outline-primary">Primary</button>
+    <button type="button" class="btn btn-outline-secondary">reset</button>
   </a>
-  </center>
+  <table style="width: 300px; height: 300px;">
+    <tbody>
+      {% set index = 0 %}
+      {% for i in context.your_card %}
+      <tr align="center">
+        {% for j in i %}
+        <td id="cell{{ index }}">{{j}}</td>
+        {% set index = index + 1 %}
+        {% endfor %}
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+  <a href="">
+    <button type="button" class="btn btn-outline-primary">ルーレットを引く</button>
+  </a>
+  
+</center>
 
 {% endblock %}
