--- a/templates/body.html
+++ b/templates/body.html
@@ -18,7 +18,8 @@
 {% for cell in context.result.reach %}
 <style>
   #cell_{{ cell }} {
-    border: 2px solid yellow;
+    font-weight: 700;
+    text-shadow: 0 1px 0 #000;
   }
 </style>
 {% endfor %}
@@ -29,7 +30,9 @@
 <style>
   #cell_{{ cell }} {
     background-color: #ff0000;
-    border: 3px solid red;
+    border: 2px solid black;
+    font-weight: 700;
+    text-shadow: 0 1px 0 #000;
   }
 </style>
 {% endfor %}
