--- a/templates/body.html
+++ b/templates/body.html
@@ -46,7 +46,7 @@
 <center>
   <h1>BINGO</h1>
   <a href="{{ url_for('reset') }}">
-    <button type="button" class="btn btn-outline-secondary">reset</button>
+    <button type="button" class="btn btn-secondary">reset</button>
   </a>
   <table style="width: 300px; height: 300px;">
     <tbody>
