--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bingo.css') }}" type="text/css">
   </head>
   {% block style %}{% endblock %} <!-- dynamic contents -->
-  <body>
+  <body background="https://cdn.pixabay.com/photo/2017/12/18/11/43/printing-3025962_1280.jpg">
     <div>
       {% block content %}{% endblock %} <!-- dynamic contents -->
     </div>
