--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,10 @@
   </head>
   {% block style %}{% endblock %} <!-- dynamic contents -->
   <body background="https://cdn.pixabay.com/photo/2017/12/18/11/43/printing-3025962_1280.jpg">
+    <style>
+    body{background-size: cover;}
+    body{font-size: 50px;}
+    </style>
     <div>
       {% block content %}{% endblock %} <!-- dynamic contents -->
     </div>
@@ -17,5 +21,4 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
-  <style>body{background-size: cover;}</style>
 </html>
