--- a/templates/body.html
+++ b/templates/body.html
@@ -77,7 +77,7 @@
 
 <center>
   <h1>{{context.result.new_number}}</h1>
-  <div class="container-fluid">
+  <div class="container-fluid" style="background-color:white;">
     <p>引いた数字</p>
     <p>{{context.drawed_num | safe}}</p>
   </div>
