--- a/templates/body.html
+++ b/templates/body.html
@@ -9,7 +9,7 @@
   #cell_{{ cell }} {
     background-color: #80ff9a;
     border: 2px solid green;
-  }
+  }body{background-size: cover;}
 </style>
 {% endfor %}
 {% endif %}
